# hsms_analyzer

./: .editorconfig  .gitignore  DEBUGGING_AND_PARSER_IMPROVEMENTS.md  FEATURE_TESTING.md  IMPLEMENTATION_SUMMARY.md  PARSER_REFACTORING_SUMMARY.md  README.md  SESSION_SUMMARY.md  package.json  sprints.md
backend/: Cargo.toml  README.md
backend/parser/: ADDING_NEW_PARSERS.md  Cargo.toml  PARSER_REFACTORING.md
backend/parser/src/: base_parser.rs  csv_parser.rs  json_parser.rs  lib.rs  ndjson_parser.rs  parsers.rs  registry_parser.rs  types.rs
backend/service/: Cargo.toml
backend/service/src/: arrow_io.rs  main.rs  models.rs  routes.rs  storage.rs
fixtures/: event_flood.csv  event_flood.ndjson  mixed.csv  mixed.ndjson  pairs.csv  pairs.ndjson
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: DataTable.tsx  FilterBar.tsx  Legend.tsx  PayloadPanel.tsx  PlotCanvas.tsx
frontend/src/datasource/: index.ts  remoteArrow.ts
frontend/src/lib/: types.ts
frontend/src/state/: store.ts
frontend/src/workers/: compute.worker.ts  io.worker.ts
scripts/: smoke_e2e.ts  verify_arrow.ts
