[package]
name = "service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "service"
path = "src/main.rs"

[dependencies]
parser = { path = "../parser" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
arrow = "57.0"
rmp-serde = "1.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

